--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -8,7 +8,7 @@
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="list-group-item">
-            <a class="nav-link" >
+            <a class="nav-link" (click)="onClick1()">
               <i class="fa fa-users" aria-hidden="true"></i>
               Current Customers
             </a>
