--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -8,7 +8,7 @@
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="list-group-item">
-            <a class="nav-link">
+            <a class="nav-link" (click)="onClick1()">
               <i class="fa fa-users" aria-hidden="true"></i>
               Current Customers
             </a>
@@ -78,14 +78,14 @@
             </a>
             <div id="loyal" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                <form>
+                <form #f="ngForm" (ngSubmit)="onSubmitt(f)">
                   <div class="form-group">
                     <label for="#duration">Duration</label>
-                    <input id="duration" type="text" class="form-control" placeholder="Specify minimum number of years">
+                    <input   name="duration" id="duration" type="text" class="form-control" placeholder="Specify minimum number of years" [ngModel]="form?.duration" #duration="ngModel">
                   </div>
                   <div class="form-group">
                     <label for="#orders">Orders</label>
-                    <input id="orders" type="text" class="form-control" placeholder="Specify minimum number of orders">
+                    <input  name="orders" id="orders" type="text" class="form-control" placeholder="Specify minimum number of orders" [ngModel]="form?.orders" #orders="ngModel">
                   </div>
                   <button type="submit" class="btn btn-primary">Show</button>
                 </form>
