--- a/client-src/src/app/components/main/branches/branches.component.html
+++ b/client-src/src/app/components/main/branches/branches.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+
 <main role="main" class="col-md-9 ml-sm-auto col-lg-9 px-4">
-  <div class="my-4 w-100" id="bmap" width="900" height="380"></div>
+  <div class="my-4 w-100" id="mapid" width="900" height="380"></div>
 </main>
 <div class="container-fluid">
   <div class="row">
@@ -22,10 +22,6 @@
          <app-remove class="list-group-item" ></app-remove>
         </li>
           
-         
-       
-         
-           
         
           <li class="list-group-item">
             <a class="nav-link" (click)="onClick1()">
@@ -128,7 +124,5 @@
       </div>
     </nav>
 
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-    </main>
   </div>
 </div>
