--- a/client-src/src/app/components/main/branches/branches.component.html
+++ b/client-src/src/app/components/main/branches/branches.component.html
@@ -31,7 +31,7 @@
           </li>
           <div id=#accordion3>
           <li class="list-group-item">
-            <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="false" aria-controls="collapseOne">
+            <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="false" aria-controls="collapseOne" (click)="onClick2()">
               <i class="fa fa-bullseye" aria-hidden="true"></i>
               Overlap Areas
             </a>
