Weakness Analysis trial

--- a/client-src/src/app/components/main/branches/branches.component.html
+++ b/client-src/src/app/components/main/branches/branches.component.html
@@ -63,9 +63,9 @@
 
           <div class="accordion" id="accordion4">
             <li class="list-group-item">
-              <a class="nav-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+<a class="nav-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" (click)="onClick3()">
                 <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-                Weak Point Analysis
+                Weakness Point Analysis
               </a>
             </li>
 
