--- a/client-src/src/app/components/main/branches/branches.component.css
+++ b/client-src/src/app/components/main/branches/branches.component.css
@@ -23,3 +23,22 @@ label.btn-secondary {
 #mapid {
     height: 750px;
 }
+input[type=text]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit]:hover {
+    background-color:RoyalBlue;
+}
+
+div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
