--- a/client-src/src/app/components/main/branches/branches.component.html
+++ b/client-src/src/app/components/main/branches/branches.component.html
@@ -11,26 +11,44 @@
           <li class="list-group-item">
             <a class="nav-link" (click)="onClick()">
               <img id="adidasicon" src="../../../assets/adidas-icon.png"> Adidas
-
             </a>
           </li>
-          <li id="accordion">
-              
-         <app-add class="list-group-item"></app-add>
-        </li>  
-        <li id="accordion2">   
-         <app-remove class="list-group-item" ></app-remove>
-        </li>
-          
-        
+          <li id="accordion" class="list-group-item">
+            <a class="nav-link" data-toggle="collapse" data-target="#add" aria-expanded="false" aria-controls="collapseOne">
+              <i class="fa fa-plus fa-lg" aria-hidden="true"></i>
+              Add Branch:
+            </a>
+            <div id="add" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                <form #f="ngForm" (ngSubmit)="onAddSubmit(f)">
+                  <label for="bname">Branch Name</label>
+                  <input ng-model="name" type="text" id="fname" name="name" [ngModel]="name" #brName="ngModel" placeholder="Your Branch name..">
+                  <br/>
+                  <label for="lname">Branch Code</label>
+                  <input type="text" id="code" name="branch_code" [ngModel]="code" #brCode="ngModel" placeholder="Your Branch Code..">
+                  <br/>
+                  <label for="lname">City</label>
+                  <input type="text" id="city" name="city" [ngModel]="city" #brCity="ngModel" placeholder="Your Branch City..">
+                  <br/>
+                  <a class="nav-link" (click)="onLocClick()">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                    Select Location
+                  </a>
+                  <input class="btn btn-primary"  type="submit" value="Add">
+                </form>
+              </div>
+            </div>
+          </li>
+          <li id="accordion2">
+            <app-remove class="list-group-item"></app-remove>
+          </li>
           <li class="list-group-item">
             <a class="nav-link" (click)="onClick1()">
               <i class="fa fa-user-secret" aria-hidden="true"></i>
               Competitor Branches
             </a>
           </li>
-          <div id=#accordion3>
-          <li class="list-group-item">
+          <li id="accordion3" class="list-group-item">
             <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="false" aria-controls="collapseOne" (click)="onClick2()">
               <i class="fa fa-bullseye" aria-hidden="true"></i>
               Overlap Areas
@@ -38,86 +56,50 @@
           </li>
           <div id="target" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
             <div class="card-body">
-
               <div class="form-group">
-                
                 <div id="overlapareas" class="form-check">
                   <div *ngFor="let overlaparea of overlapareas">
-
                     <label class="form-check-label">
                       <input class="form-check-input" [value]="overlaparea.id" type="checkbox">
                       <img id="adidasicon" src="../../../assets/adidas-icon.png"> {{ overlaparea.name }}
                     </label>
-                    <!--   <label class="form-check-label">
-                  
-                <input class="form-check-input"  type="checkbox" >
-                <i class="fa fa-user-secret" aria-hidden="true"></i>Competitor Branches
-              </label> -->
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          </div>
-
-
-          <div class="accordion" id="accordion4">
-            <li class="list-group-item">
-<a class="nav-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" (click)="onClick3()">
-                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-                Weakness Point Analysis
-              </a>
-            </li>
-
-            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-              <div class="card-body">
-                <div class="btn-group-toggle" data-toggle="buttons">
-
-
-                  <label class="circle btn btn-secondary btn-outline-primary">
-                    <input type="checkbox" checked autocomplete="off">
-                    <i class="fa fa-object-group" aria-hidden="true"></i>
-
-                  </label>
-
-
-                  <label class="circle btn btn-secondary btn-outline-primary">
-                    <input type="checkbox" checked autocomplete="off">
-                    <i class="fa fa-object-ungroup" aria-hidden="true"></i>
-
-                  </label>
-
-
-                  <label class="circle btn btn-secondary btn-outline-primary">
-                    <input type="checkbox" checked autocomplete="off">
-                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-
-                  </label>
-
-                  <label class="circle btn btn-secondary btn-outline-primary">
-
-                    <input type="checkbox" checked autocomplete="off">
-                    <i class="fa fa-users" aria-hidden="true"></i>
-
-                  </label>
-
-                  <label class="circle btn btn-secondary btn-outline-primary">
-                    <input type="checkbox" checked autocomplete="off">
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
-
-                  </label>
-                </div>
+          <li id="accordion4" class="list-group-item">
+            <a class="nav-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" (click)="onClick3()">
+              <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+              Weakness Point Analysis
+            </a>
+          </li>
+          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body">
+              <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="circle btn btn-secondary btn-outline-primary">
+                  <input type="checkbox" checked autocomplete="off">
+                  <i class="fa fa-object-group" aria-hidden="true"></i>
+                </label>
+                <label class="circle btn btn-secondary btn-outline-primary">
+                  <input type="checkbox" checked autocomplete="off">
+                  <i class="fa fa-object-ungroup" aria-hidden="true"></i>
+                </label>
+                <label class="circle btn btn-secondary btn-outline-primary">
+                  <input type="checkbox" checked autocomplete="off">
+                  <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+                </label>
+                <label class="circle btn btn-secondary btn-outline-primary">
+                  <input type="checkbox" checked autocomplete="off">
+                  <i class="fa fa-users" aria-hidden="true"></i>
+                </label>
+                <label class="circle btn btn-secondary btn-outline-primary">
+                  <input type="checkbox" checked autocomplete="off">
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                </label>
               </div>
             </div>
           </div>
-          <li class="list-group-item">
-            <a class="nav-link" href="#">
-              <i class="fa fa-bar-chart" aria-hidden="true"></i>
-              Dashboard
-            </a>
-          </li>
-
-
         </ul>
 
 
