--- a/client-src/src/app/components/main/expansion/expansion.component.html
+++ b/client-src/src/app/components/main/expansion/expansion.component.html
@@ -26,7 +26,7 @@
           <li class="list-group-item">
             <a class="nav-link" (click)="onClick()">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
-              Pin Point
+              Pinpoint
             </a>
           </li>
           <li class="list-group-item">
