--- a/client-src/src/app/components/login/login.component.html
+++ b/client-src/src/app/components/login/login.component.html
@@ -2,8 +2,8 @@
   <form #f="ngForm" (ngSubmit)="onSubmit(f)" class="form-signin">
     <div class="text-center mb-4">
      
-      <h1 class="h3 mb-3 font-weight-normal">Geo-Marketing</h1>
-      <p>An easy interface that helps you to market for your brand more efficiently</p>
+      <h1 class="h3 mb-3 font-weight-normal"></h1>
+      <img id="AppLogo" src="../../assets/AppLogo.png">
     </div>
     <div *ngIf="invalidLogin" class="aler alert-danger">Invalid Email and/or Password.</div>
     <div class="form-label-group">
