--- a/client-src/src/app/components/login/login.component.css
+++ b/client-src/src/app/components/login/login.component.css
@@ -1,5 +1,5 @@
 .bg{
-  background-image: url("../../../assets/photo-water-1.jpg");
+ 
 
       background-position: center;
       background-repeat: no-repeat;
@@ -66,4 +66,8 @@
   padding-bottom: calc(var(--input-padding-y) / 3);
   font-size: 12px;
   color: transparent;
+}
+img#AppLogo{
+  width: 150px;
+  height: auto;
 }
