--- a/client-src/src/app/components/main/navbar/navbar.component.html
+++ b/client-src/src/app/components/main/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-  <a class="navbar-brand" href="main">Geomarketing</a>
+  <a class="navbar-brand" href="main">
+    Geo-Markit
+  </a>
   <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+      
   <div class="navbar-collapse offcanvas-collapse col-md-9 ml-sm-auto col-lg-10" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
