--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -97,8 +97,8 @@
           <div id="accordion3">
             <li class="list-group-item">
               <a class="nav-link" data-toggle="collapse" data-target="#add" aria-expanded="false" aria-controls="collapseOne">
-                <i class="fa fa-bullseye" aria-hidden="true"></i>
-                Add customer:
+                <i class="fa fa-plus" aria-hidden="true"></i>
+                Add Customer
               </a>
             </li>
             <div id="add" class="collapse" aria-labelledby="headingOne" data-parent="#accordion3">
@@ -109,9 +109,6 @@
                       <i class="fa fa-plus fa-lg" aria-hidden="true"></i>
                     </button>
                   </a>
-                  <button class="circle btn btn-secondary btn-outline-primary" (click)='onSubmit(f)' routerLink='/main/customer/removecustomer'>
-                    <i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
-                  </button>
                 </form>
               </div>
             </div>
